--- a/index.html
+++ b/index.html
@@ -39,6 +39,49 @@
                 </button>
             </div>
         </section>
+        <section class="restaurants">
+            <h2>Restaurants</h2>
+            <div class="card">
+                <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
+                <div class="card-content">
+                    <h3>Restaurant 1</h3>
+                    <p>Description du restaurant 1.</p>
+                    <span class="like-icon">
+                        <span class="material-icons">favorite</span>
+                    </span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
+                <div class="card-content">
+                    <h3>Restaurant 2</h3>
+                    <p>Description du restaurant 2.</p>
+                    <span class="like-icon">
+                        <span class="material-icons">favorite</span>
+                    </span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 1">
+                <div class="card-content">
+                    <h3>Restaurant 1</h3>
+                    <p>Description du restaurant 1.</p>
+                    <span class="like-icon">
+                        <span class="material-icons">favorite</span>
+                    </span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 1">
+                <div class="card-content">
+                    <h3>Restaurant 1</h3>
+                    <p>Description du restaurant 1.</p>
+                    <span class="like-icon">
+                        <span class="material-icons">favorite</span>
+                    </span>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
