--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>OhMyFood</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
     <header>
@@ -42,49 +43,72 @@
         <section class="restaurants">
             <h2>Restaurants</h2>
             <div class="card">
+                <div class="new-badge">Nouveau</div>
                 <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
                 <div class="card-content">
-                    <h3>Restaurant 1</h3>
-                    <p>Description du restaurant 1.</p>
+                    <div class="text-container">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                    </div>
                     <span class="like-icon">
-                        <span class="material-icons">favorite</span>
                     </span>
                 </div>
             </div>
             <div class="card">
+                <div class="new-badge">Nouveau</div>
                 <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
                 <div class="card-content">
-                    <h3>Restaurant 2</h3>
-                    <p>Description du restaurant 2.</p>
+                    <div class="text-container">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                    </div>
                     <span class="like-icon">
-                        <span class="material-icons">favorite</span>
                     </span>
                 </div>
             </div>
             <div class="card">
                 <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 1">
                 <div class="card-content">
-                    <h3>Restaurant 1</h3>
-                    <p>Description du restaurant 1.</p>
+                    <div class="text-container">
+                        <h3>A la française</h3>
+                        <p>Cité Rouge</p>
+                    </div>
                     <span class="like-icon">
-                        <span class="material-icons">favorite</span>
                     </span>
                 </div>
             </div>
             <div class="card">
                 <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 1">
                 <div class="card-content">
-                    <h3>Restaurant 1</h3>
-                    <p>Description du restaurant 1.</p>
+                    <div class="text-container">
+                        <h3>Le dèlice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                    </div>
                     <span class="like-icon">
-                        <span class="material-icons">favorite</span>
                     </span>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-        
+    <footer class="site-footer">
+        <h4>ohmyfood</h4>
+        <div class="footer-links">
+            <div class="footer-link">
+                <span class="material-symbols-outlined">
+                    restaurant
+                </span>
+                <span>Proposer un restaurant</span>
+            </div>
+            <div class="footer-link">
+                <span class="material-symbols-outlined">
+                    handshake
+                </span>
+                <span>Devenir partenaire</span>
+            </div>
+            <a href="#">Mentions légales</a>
+            <a href="#">Contact</a>
+        </div>
     </footer>
+    
 </body>
 </html>
