--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="location-text">Paris, Belleville</span>
         </section>
         <section class="reservation">
-            <h2 class="bold-h2">Réservez le menu qui <br/>vous convient</h2>
+            <h2 class="reservation">Réservez le menu qui <br/>vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <button class="explore-btn">Explorer nos restaurants</button>
         </section>
@@ -27,14 +27,17 @@
             <h2>Fonctionnement</h2>
             <div class="buttons-container">
                 <button class="fonctionnement-btn">
+                    <div class="num-icon">1</div>
                     <i class="material-icons icon">phone_iphone</i>
                     <span class="btn-text">Choisissez un restaurant</span>
                 </button>
                 <button class="fonctionnement-btn">
+                    <div class="num-icon">2</div>
                     <i class="material-icons icon">format_list_bulleted</i>
                     <span class="btn-text">Composez votre menu</span>
                 </button>
                 <button class="fonctionnement-btn">
+                    <div class="num-icon">3</div>
                     <i class="material-icons icon">storefront</i>
                     <span class="btn-text">Dégustez au restaurant</span>
                 </button>
@@ -42,6 +45,7 @@
         </section>
         <section class="restaurants">
             <h2>Restaurants</h2>
+        <div class="cards">
             <div class="card">
                 <div class="new-badge">Nouveau</div>
                 <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
@@ -88,27 +92,25 @@
                     </span>
                 </div>
             </div>
+        </div>
         </section>
     </main>
     <footer class="site-footer">
         <h4>ohmyfood</h4>
         <div class="footer-links">
             <div class="footer-link">
-                <span class="material-symbols-outlined">
-                    restaurant
-                </span>
-                <span>Proposer un restaurant</span>
+                <span class="material-symbols-outlined">restaurant</span>
+                <a href="#">Proposer un restaurant</a>
             </div>
             <div class="footer-link">
-                <span class="material-symbols-outlined">
-                    handshake
-                </span>
-                <span>Devenir partenaire</span>
+                <span class="material-symbols-outlined">handshake</span>
+                <a href="#">Devenir partenaire</a>
             </div>
             <a href="#">Mentions légales</a>
             <a href="#">Contact</a>
         </div>
     </footer>
+    
     
 </body>
 </html>
