html des menus terminé

--- a/restaurants/menu4.html
+++ b/restaurants/menu4.html
@@ -11,30 +11,45 @@
 </head>
 <body>
     <header class="header-container">
-        <a href="index.html" class="back-arrow">
+        <a href="../index.html" class="back-arrow">
             <span class="material-icons">arrow_back</span>
         </a>
         <h1>OhmyFood</h1>
     </header>
     <main>
+        <section class="image-menu">
+            <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 2">
+        </section>
         <section class="menu-section">
-            <h2>À la française</h2>
-            
+            <div class="title">
+                <h2>À la française</h2>
+                <span class="like-icon"></span>
+            </div>
             <!-- Entrées -->
             <section class="menu-category">
                 <h3>Entrées</h3>
+                <div class="underline"></div>
                 <div class="menu-items">
                     <button class="menu-item">
-                        Tartare de poulpe acidulé aux zestes d'orange
-                        <span class="item-price">25€</span>
+                        <span class="item-title">Tartare de poulpe acidulé</span>
+                        <div class="item-details">
+                            <span class="item-description">Aux zestes d'orange</span>
+                            <span class="item-price">25€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Velouté de légumes d'antan (carotte, panais, topinambour)
-                        <span class="item-price">35€</span>
+                        <span class="item-title">Velouté de légumes d'antan</span>
+                        <div class="item-details">
+                            <span class="item-description">Carotte, panais, topinambour</span>
+                            <span class="item-price">35€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Soupe à l'oignon revisitée
-                        <span class="item-price">20€</span>
+                        <span class="item-title">Soupe à l'oignon</span>
+                        <div class="item-details">
+                            <span class="item-description">Revisitée</span>
+                            <span class="item-price">20€</span>
+                        </div>
                     </button>
                 </div>
             </section>
@@ -42,18 +57,28 @@
             <!-- Plats -->
             <section class="menu-category">
                 <h3>Plats</h3>
+                <div class="underline"></div>
                 <div class="menu-items">
                     <button class="menu-item">
-                        Coquilles Saint-Jacques accompagnées d'une purée de panais
-                        <span class="item-price">40€</span>
+                        <span class="item-title">Coquilles Saint-Jacques</span>
+                        <div class="item-details">
+                            <span class="item-description">Accompagnées d'une purée de panais</span>
+                            <span class="item-price">40€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Magret de canard et parmentier de pommes de terre
-                        <span class="item-price">35€</span>
+                        <span class="item-title">Magret de canard</span>
+                        <div class="item-details">
+                            <span class="item-description">Et parmentier de pommes de terre</span>
+                            <span class="item-price">35€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Pigeonneau d’Ille-et-Vilaine sur son lit de gnocchis aux légumes
-                        <span class="item-price">44€</span>
+                        <span class="item-title">Pigeonneau d’Ille-et-Vilaine</span>
+                        <div class="item-details">
+                            <span class="item-description">Sur son lit de gnocchis aux légumes</span>
+                            <span class="item-price">44€</span>
+                        </div>
                     </button>
                 </div>
             </section>
@@ -61,22 +86,34 @@
             <!-- Desserts -->
             <section class="menu-category">
                 <h3>Desserts</h3>
+                <div class="underline"></div>
                 <div class="menu-items">
                     <button class="menu-item">
-                        Pétales de violettes glacés et purée de noisettes
-                        <span class="item-price">18€</span>
+                        <span class="item-title">Pétales de violettes glacés</span>
+                        <div class="item-details">
+                            <span class="item-description">Et purée de noisettes</span>
+                            <span class="item-price">18€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Fondant au chocolat revisité
-                        <span class="item-price">22€</span>
+                        <span class="item-title">Fondant au chocolat</span>
+                        <div class="item-details">
+                            <span class="item-description">Revisité</span>
+                            <span class="item-price">22€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Millefeuille croustillant aux myrtilles et pâte d’amande
-                        <span class="item-price">23€</span>
+                        <span class="item-title">Millefeuille croustillant</span>
+                        <div class="item-details">
+                            <span class="item-description">Myrtilles et pâte d’amande</span>
+                            <span class="item-price">23€</span>
+                        </div>
                     </button>
                 </div>
             </section>
-            
+            <div class="button-comand">
+                <button class="explore-btn">Commander</button>
+            </div>
         </section>
     </main>
     <footer class="site-footer">
@@ -96,3 +133,4 @@
     </footer>
 </body>
 </html>
+
