--- a/restaurants/menu3.html
+++ b/restaurants/menu3.html
@@ -10,32 +10,53 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-    <header>
+    <header class="header-container">
+        <a href="../index.html" class="back-arrow">
+            <span class="material-icons">arrow_back</span>
+        </a>
         <h1>OhmyFood</h1>
     </header>
     <main>
+        <section class="image-menu">
+            <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 3">
+        </section>
         <section class="menu-section">
-            <h2>La note enchantée</h2>
-            
+            <div class="title">
+                <h2>La note enchantée</h2>
+                <span class="like-icon"></span>
+            </div>
             <!-- Entrées -->
             <section class="menu-category">
                 <h3>Entrées</h3>
+                <div class="underline"></div>
                 <div class="menu-items">
                     <button class="menu-item">
-                        Ravioles de foie gras
-                        <span class="item-price">25€</span>
+                        <span class="item-title">Ravioles de foie gras</span>
+                        <div class="item-details">
+                            <span class="item-description">Accompagnées de leur crème à la truffe</span>
+                            <span class="item-price">25€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Caviar osciètre sur blini à la farine de blé noir
-                        <span class="item-price">35€</span>
+                        <span class="item-title">Caviar osciètre</span>
+                        <div class="item-details">
+                            <span class="item-description">Sur blini à la farine de blé noir</span>
+                            <span class="item-price">35€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Homard et espuma de potiron marinés aux zestes d'orange
-                        <span class="item-price">20€</span>
+                        <span class="item-title">Homard et espuma de potiron</span>
+                        <div class="item-details">
+                            <span class="item-description">Marinés aux zestes d'orange</span>
+                            <span class="item-price">20€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Foie gras de canard cuit entier, confiture de figue et pain toasté
-                        <span class="item-price">35€</span>
+                        <span class="item-title">Foie gras de canard cuit entier</span>
+                        <div class="item-details">
+                            <span class="item-description">Confiture de figue et pain toasté</span>
+                            <span class="item-price">35€</span>
+                        </div>
                     </button>
                 </div>
             </section>
@@ -43,18 +64,28 @@
             <!-- Plats -->
             <section class="menu-category">
                 <h3>Plats</h3>
+                <div class="underline"></div>
                 <div class="menu-items">
                     <button class="menu-item">
-                        Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave
-                        <span class="item-price">40€</span>
+                        <span class="item-title">Noix de coquilles Saint-Jacques</span>
+                        <div class="item-details">
+                            <span class="item-description">Sur lit de purée de céleri-rave</span>
+                            <span class="item-price">40€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Langoustine poêlée, purée de patate douce
-                        <span class="item-price">35€</span>
+                        <span class="item-title">Langoustine poêlée</span>
+                        <div class="item-details">
+                            <span class="item-description">Purée de patate douce</span>
+                            <span class="item-price">35€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Mijoté de queue de bœuf et riz sauvage aux zestes de citron
-                        <span class="item-price">44€</span>
+                        <span class="item-title">Mijoté de queue de bœuf</span>
+                        <div class="item-details">
+                            <span class="item-description">Et riz sauvage aux zestes de citron</span>
+                            <span class="item-price">44€</span>
+                        </div>
                     </button>
                 </div>
             </section>
@@ -62,22 +93,34 @@
             <!-- Desserts -->
             <section class="menu-category">
                 <h3>Desserts</h3>
+                <div class="underline"></div>
                 <div class="menu-items">
                     <button class="menu-item">
-                        Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
-                        <span class="item-price">18€</span>
+                        <span class="item-title">Macaron noisette et chocolat</span>
+                        <div class="item-details">
+                            <span class="item-description">Glace au caramel brun et sel de Guérande</span>
+                            <span class="item-price">18€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Baba au rhum revisité avec son coulis de citron
-                        <span class="item-price">22€</span>
+                        <span class="item-title">Baba au rhum revisité</span>
+                        <div class="item-details">
+                            <span class="item-description">Avec son coulis de citron</span>
+                            <span class="item-price">22€</span>
+                        </div>
                     </button>
                     <button class="menu-item">
-                        Tarte au citron meringuée déstructurée
-                        <span class="item-price">23€</span>
+                        <span class="item-title">Tarte au citron meringuée</span>
+                        <div class="item-details">
+                            <span class="item-description">Déstructurée</span>
+                            <span class="item-price">23€</span>
+                        </div>
                     </button>
                 </div>
             </section>
-            
+            <div class="button-comand">
+                <button class="explore-btn">Commander</button>
+            </div>
         </section>
     </main>
     <footer class="site-footer">
