--- a/restaurants/menu3.html
+++ b/restaurants/menu3.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/menu-styles.css">
-    <title>OhMyFood</title>
+    <title>OhMyFood - La note enchantée</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicon_io%20(2)/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon_io%20(2)/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon_io%20(2)/favicon-16x16.png">
+    <link rel="manifest" href="../assets/images/favicon_io%20(2)/site.webmanifest">
 </head>
 <body>
     <header class="header-container">
@@ -17,9 +21,9 @@
         <h1>OhmyFood</h1>
     </header>
     <main>
-        <section class="image-menu">
+        <div class="image-menu">
             <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 3">
-        </section>
+        </div>
         <section class="menu-section">
             <div class="title">
                 <h2>La note enchantée</h2>
@@ -30,34 +34,36 @@
                 <h3>Entrées</h3>
                 <div class="underline"></div>
                 <div class="menu-items">
-                    <button class="menu-item">
-                        <span class="item-title">Ravioles de foie gras</span>
-                        <div class="item-details">
-                            <span class="item-description">Accompagnées de leur crème à la truffe</span>
-                            <span class="item-price">25€</span>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Ravioles de foie gras</h4>
+                            <p class="item-description">Accompagnées de leur crème à la truffe</p>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Caviar osciètre</span>
-                        <div class="item-details">
-                            <span class="item-description">Sur blini à la farine de blé noir</span>
-                            <span class="item-price">35€</span>
+                        <p class="item-price">25€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Homard et espuma de potiron</span>
-                        <div class="item-details">
-                            <span class="item-description">Marinés aux zestes d'orange</span>
-                            <span class="item-price">20€</span>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Oeuf parfait</h4>
+                            <p class="item-description">Et ses éclats de truffe noire</p>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Foie gras de canard cuit entier</span>
-                        <div class="item-details">
-                            <span class="item-description">Confiture de figue et pain toasté</span>
-                            <span class="item-price">35€</span>
+                        <p class="item-price">35€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
                         </div>
-                    </button>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Salade de langoustines</h4>
+                            <p class="item-description">Sur lit de jeunes pousses</p>
+                        </div>
+                        <p class="item-price">20€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
                 </div>
             </section>
             
@@ -66,27 +72,36 @@
                 <h3>Plats</h3>
                 <div class="underline"></div>
                 <div class="menu-items">
-                    <button class="menu-item">
-                        <span class="item-title">Noix de coquilles Saint-Jacques</span>
-                        <div class="item-details">
-                            <span class="item-description">Sur lit de purée de céleri-rave</span>
-                            <span class="item-price">40€</span>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Risotto aux cèpes</h4>
+                            <p class="item-description">Parfumé à l'huile de truffe</p>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Langoustine poêlée</span>
-                        <div class="item-details">
-                            <span class="item-description">Purée de patate douce</span>
-                            <span class="item-price">35€</span>
+                        <p class="item-price">40€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Mijoté de queue de bœuf</span>
-                        <div class="item-details">
-                            <span class="item-description">Et riz sauvage aux zestes de citron</span>
-                            <span class="item-price">44€</span>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Lotte en croûte d'herbes</h4>
+                            <p class="item-description">Servie avec une purée de carottes</p>
                         </div>
-                    </button>
+                        <p class="item-price">35€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Magret de canard</h4>
+                            <p class="item-description">Avec sa sauce au miel et thym</p>
+                        </div>
+                        <p class="item-price">44€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
                 </div>
             </section>
             
@@ -95,27 +110,36 @@
                 <h3>Desserts</h3>
                 <div class="underline"></div>
                 <div class="menu-items">
-                    <button class="menu-item">
-                        <span class="item-title">Macaron noisette et chocolat</span>
-                        <div class="item-details">
-                            <span class="item-description">Glace au caramel brun et sel de Guérande</span>
-                            <span class="item-price">18€</span>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Fondant au chocolat</h4>
+                            <p class="item-description">Avec son cœur coulant</p>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Baba au rhum revisité</span>
-                        <div class="item-details">
-                            <span class="item-description">Avec son coulis de citron</span>
-                            <span class="item-price">22€</span>
+                        <p class="item-price">18€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Tarte au citron meringuée</span>
-                        <div class="item-details">
-                            <span class="item-description">Déstructurée</span>
-                            <span class="item-price">23€</span>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Panna cotta aux fruits rouges</h4>
+                            <p class="item-description">Et sa compotée de framboises</p>
                         </div>
-                    </button>
+                        <p class="item-price">22€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Cheesecake au citron</h4>
+                            <p class="item-description">Et son coulis de fruits exotiques</p>
+                        </div>
+                        <p class="item-price">23€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
                 </div>
             </section>
             <div class="button-comand">
