--- a/restaurants/menu4.html
+++ b/restaurants/menu4.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/menu-styles.css">
-    <title>OhMyFood</title>
+    <title>OhMyFood - À la française</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicon_io%20(2)/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon_io%20(2)/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon_io%20(2)/favicon-16x16.png">
+    <link rel="manifest" href="../assets/images/favicon_io%20(2)/site.webmanifest">
 </head>
 <body>
     <header class="header-container">
@@ -17,9 +21,9 @@
         <h1>OhmyFood</h1>
     </header>
     <main>
-        <section class="image-menu">
-            <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 2">
-        </section>
+        <div class="image-menu">
+            <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 4">
+        </div>
         <section class="menu-section">
             <div class="title">
                 <h2>À la française</h2>
@@ -30,27 +34,36 @@
                 <h3>Entrées</h3>
                 <div class="underline"></div>
                 <div class="menu-items">
-                    <button class="menu-item">
-                        <span class="item-title">Tartare de poulpe acidulé</span>
-                        <div class="item-details">
-                            <span class="item-description">Aux zestes d'orange</span>
-                            <span class="item-price">25€</span>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Tartare de poulpe acidulé</h4>
+                            <p class="item-description">Aux zestes d'orange</p>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Velouté de légumes d'antan</span>
-                        <div class="item-details">
-                            <span class="item-description">Carotte, panais, topinambour</span>
-                            <span class="item-price">35€</span>
+                        <p class="item-price">25€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Soupe à l'oignon</span>
-                        <div class="item-details">
-                            <span class="item-description">Revisitée</span>
-                            <span class="item-price">20€</span>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Velouté de légumes d'antan</h4>
+                            <p class="item-description">Carotte, panais, topinambour</p>
                         </div>
-                    </button>
+                        <p class="item-price">35€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Soupe à l'oignon</h4>
+                            <p class="item-description">Revisitée</p>
+                        </div>
+                        <p class="item-price">20€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
                 </div>
             </section>
             
@@ -59,27 +72,36 @@
                 <h3>Plats</h3>
                 <div class="underline"></div>
                 <div class="menu-items">
-                    <button class="menu-item">
-                        <span class="item-title">Coquilles Saint-Jacques</span>
-                        <div class="item-details">
-                            <span class="item-description">Accompagnées d'une purée de panais</span>
-                            <span class="item-price">40€</span>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Coquilles Saint-Jacques</h4>
+                            <p class="item-description">Accompagnées d'une purée de panais</p>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Magret de canard</span>
-                        <div class="item-details">
-                            <span class="item-description">Et parmentier de pommes de terre</span>
-                            <span class="item-price">35€</span>
+                        <p class="item-price">40€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Pigeonneau d’Ille-et-Vilaine</span>
-                        <div class="item-details">
-                            <span class="item-description">Sur son lit de gnocchis aux légumes</span>
-                            <span class="item-price">44€</span>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Magret de canard</h4>
+                            <p class="item-description">Et parmentier de pommes de terre</p>
                         </div>
-                    </button>
+                        <p class="item-price">35€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Pigeonneau d’Ille-et-Vilaine</h4>
+                            <p class="item-description">Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <p class="item-price">44€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
                 </div>
             </section>
             
@@ -88,27 +110,36 @@
                 <h3>Desserts</h3>
                 <div class="underline"></div>
                 <div class="menu-items">
-                    <button class="menu-item">
-                        <span class="item-title">Pétales de violettes glacés</span>
-                        <div class="item-details">
-                            <span class="item-description">Et purée de noisettes</span>
-                            <span class="item-price">18€</span>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Pétales de violettes glacés</h4>
+                            <p class="item-description">Et purée de noisettes</p>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Fondant au chocolat</span>
-                        <div class="item-details">
-                            <span class="item-description">Revisité</span>
-                            <span class="item-price">22€</span>
+                        <p class="item-price">18€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
                         </div>
-                    </button>
-                    <button class="menu-item">
-                        <span class="item-title">Millefeuille croustillant</span>
-                        <div class="item-details">
-                            <span class="item-description">Myrtilles et pâte d’amande</span>
-                            <span class="item-price">23€</span>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Fondant au chocolat</h4>
+                            <p class="item-description">Revisité</p>
                         </div>
-                    </button>
+                        <p class="item-price">22€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-description">
+                            <h4 class="item-title">Millefeuille croustillant</h4>
+                            <p class="item-description">Myrtilles et pâte d’amande</p>
+                        </div>
+                        <p class="item-price">23€</p>
+                        <div class="box-check">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </div>
                 </div>
             </section>
             <div class="button-comand">
@@ -133,4 +164,3 @@
     </footer>
 </body>
 </html>
-
